# tdlib

./: .gitattributes  .travis.yml  AUTHORS  BUGS  COPYING  Makefile.am  NEWS  README  TD_NetworkFlow.hpp  TD_branch_decomposition.hpp  TD_combinations.hpp  TD_dynamicCR.hpp  TD_elimination_orderings.hpp  TD_exact_cutset.hpp  TD_greedyCR.hpp  TD_lower_bounds.hpp  TD_misc.hpp  TD_partial_tw4_preprocessing.hpp  TD_postprocessing.hpp  TD_preprocessing.hpp  TD_seperator_algorithm.hpp  TD_upper_bounds.hpp  THANKS  TODO  bootstrap  configure.ac  cython.am  log_compiler  py_log_compiler  simple_graph_algos.hpp  test-driver
doc/: Makefile  Makefile.am  documentation.tex
doc/Results/: 10_PP_MD.tex  13_thorup.tex  14_separator.tex  16_sep_msvs.tex  18_PP_FI_TM.tex  20_separator.tex  23_max_clique.tex  25_min_vertex_cover.tex  27_min_coloring.tex  29_sep_TM.tex  33_FI_TM.tex  4_lb_improved1.tex  8_exact_dynamic.tex
doc/graphs/: Makefile.am
doc/src/: Makefile.am  Thorup.hpp  table1.cpp  table10.cpp  table11.cpp  table12.cpp  table13.cpp  table14.cpp  table15.cpp  table16.cpp  table17.cpp  table18.cpp  table19.cpp  table2.cpp  table20.cpp  table21.cpp  table22.cpp  table23.cpp  table24.cpp  table25.cpp  table26.cpp  table27.cpp  table28.cpp  table29.cpp  table3.cpp  table30.cpp  table31.cpp  table32.cpp  table33.cpp  table34.cpp  table4.cpp  table5.cpp  table6.cpp  table7.cpp  table8.cpp  table9.cpp  tex.cpp
examples/: Makefile.am  bmd_thread.h  ex17_thread.h  ex_thread.h  fi_thread.h  gala_graphs.h  grparse.h  pp_thread.h  td-validate.cc  tdecomp.cc  test-bmd.sh  test-fi.sh  test-ppfi.sh  th_thread.h  timer.h  twh.h  twthread.hpp
examples/gr/: Makefile.am  adg.gr  grid_10x10.gr  h.gr  test.gr  testgraph2.gr  testgraph3.gr  testgraph4.gr
pytdlib/: CFGs.py  Decomp.py  Graph.py  Makefile  Makefile.am  RandomGNM_250_1000.py  __init__.py  dot_to_pytdlib.py  graphs.py  newdot_dot_to_pytdlib.py  python_tdlib.cpp  python_tdlib.hpp  tdlib.pxd  tdlib.pyx  test.py  test_approx.py  test_apps.py  test_bmd.py  test_exact.py  test_fill_in.py  test_lb.py  test_long_approx_CFGs.py  test_long_apps_CFGs.py  test_long_lb_CFGs.py  test_misc.py  test_packages.py  test_post.py  test_pp_fi.py  test_pp_md.py  test_pre.py  test_sep.py  util.py
pytdlib/tests/: Makefile.am  Networks.py  NewCFGs.py  PP_guhax.py  Zoo.py  base.py  exact_ta.py  long_test_1.py  test_approx.py  test_apps.py  test_bmd.py  test_exact.py  test_fill_in.py  test_generic_search.py  test_generic_search_CFG1.py  test_generic_search_CFG2.py  test_generic_search_gala.py  test_generic_search_p17.py  test_lb.py  test_long_approx_CFGs.py  test_long_approx_Dimacs.py  test_long_approx_NewCFGs.py  test_long_approx_Zoo.py  test_long_apps_CFGs.py  test_long_apps_NewCFGs.py  test_long_apps_Zoo.py  test_long_fi_Dimacs.py  test_long_generic_search.py  test_long_generic_search_Dimacs.py  test_long_generic_search_Networks.py  test_long_generic_search_gala.py  test_long_generic_search_pace.py  test_long_lb_CFGs.py  test_long_lb_Dimacs.py  test_long_lb_NewCFGs.py  test_long_lb_Zoo.py  test_misc.py  test_post.py  test_pp_fi.py  test_pp_md.py  (+3 more)
src/: Makefile.am  NetworkFlow.hpp  TD_NetworkFlow.hpp  TD_applications.hpp  TD_approximate_seperator.hpp  TD_approximation.hpp  TD_branch_and_bound.hpp  TD_branch_decomposition.hpp  TD_combinations.hpp  TD_degree.hpp  TD_dynamicCR.hpp  TD_elimination_orderings.hpp  TD_exact_cutset.hpp  TD_hard_problems.hpp  TD_lower_bounds.hpp  TD_misc.hpp  TD_nice_decomposition.hpp  TD_noboost.hpp  TD_postprocessing.hpp  TD_preprocessing.hpp  TD_preprocessing_experiments.hpp  TD_random.hpp  TD_seperator_algorithm.hpp  TD_simple_graph_algos.hpp  TD_std.hpp  TD_upper_bounds.hpp  algo.hpp  applications.hpp  approximate_seperator.hpp  approximation.hpp  branch_and_bound.hpp  branch_decomposition.hpp  bucket_sorter.hpp  bucket_sorter.hpp.orig  bucket_sorter.hpp~  bucket_sorter_bits.hpp  combinations.hpp  config_traits.hpp  container.hpp  container_traits.hpp  (+65 more)
src/applications/: Makefile  Makefile.am  Makefile.in  applications.hpp  clique.hpp  coloring.hpp  dominating_set.hpp  independent_set.hpp  independent_set2.hpp  obsolete_applications.hpp  obsolete_independent_set.hpp  obsolete_vertex_cover.hpp  vertex_cover.hpp  vertex_cover2.hpp
src/bits/: Makefile.am  bool.hpp  container_bits.hpp  predicates.hpp  trie.hpp  triealloc.hpp
src/deprecated/: TD_hard_problems.hpp  approximate_seperator.hpp  approximation.hpp  branch_and_bound.hpp  checking.hpp  np_validation.hpp
src/depricated/: TD_approximation.hpp  TD_depricated.hpp  approximation.hpp  cfgs.py  validation.hpp
src/impl/: Makefile.am  fill_in.hpp  fill_in_obsolete.hpp  fill_in_sg.hpp  greedy_base.hpp  greedy_heuristic.hpp  min_degree.hpp  obsolete_greedy_base.hpp
tdlib/: Makefile.am  __init__.py  cytdlib.pxd  cytdlib.pyx  graphs.py  printer.py  python_tdlib.cpp
tdlib/tests/: CFGs.py  Makefile.am  NewCFGs.py  Zoo.py  base.py  dclc_g5.py  exact_ta.py  test_apps.py  test_bmd.py  test_exact.py  test_fill_in.py  test_generic_search_gala.py  test_lb.py  test_long_approx_CFGs.py  test_long_approx_Dimacs.py  test_long_approx_NewCFGs.py  test_long_fi_Dimacs.py  test_post.py  (+6 more)
tests/: MakeList  Makefile.am  bag.cpp  bmd.cpp  bucket_sorter_1.cpp  bucket_sorter_2.cpp  bucket_sorter_2u.cpp  bucket_sorter_3.cpp  bug_19.cpp  common_out_edges.cpp  custom_td.cpp  dead_simple.cpp  directed_view.cpp  elim0.cpp  fill_in0.cpp  fill_in1.cpp  fill_in2.cpp  g.h  g_19.h  gala_bmd.cpp  graph.cpp  inline.cpp  iter0.cpp  iter1.cpp  numbering0.cpp  numbering1.cpp  numbering2.cpp  pp.cpp  pp0.cpp  pp1.cpp  pp_path.cpp  print_concept.cpp  sdcc.cpp  sdcc_.cpp  sdcc_bb.cpp  sdcc_bu.cpp  sdcc_ub.cpp  sdcc_ub_set.cpp  sdcc_uu.cpp  supergraph0.cpp  (+3 more)
treedec/: MakeList  Makefile.am  __init__.py  _comb.cpp  _exact.cpp  _graph.cpp  _greedy.cpp  _lb.cpp  _misc.cpp  _order.cpp  _pp.cpp  _treedec.cpp  algo_py.hpp  boost_compat.h  boost_graph.hpp  comb.py  exact.py  gala_graph_py.hpp  graph.py  graph_iter.hpp  graph_py.hpp  greedy.py  lb.py  order.py  pp.py  python_tdlib.hpp  tdlib.pxd  treedec.py  util_py.hpp
(+2018 files in other folders)
