SUBDIRS = \
	bits \
	impl \
	applications

pkginclude_HEADERS = \
  algo.hpp \
  applications.hpp \
  branch_decomposition.hpp \
  bucket_sorter_bits.hpp \
  bucket_sorter.hpp \
  combinations.hpp \
  config_traits.hpp \
  container.hpp \
  container_traits.hpp \
  convenience.hpp \
  copy.hpp \
  degree_config.hpp \
  degree.hpp \
  directed_view.hpp \
  dynamicCR.hpp \
  elimination_orderings.hpp \
  error.hpp \
  exact_cutset.hpp \
  exact.hpp \
  fill.hpp \
  generic_base.hpp \
  generic_elimination_search_configs.hpp \
  generic_elimination_search.hpp \
  generic_elimination_search_overlay.hpp \
  graph.hpp \
  graph_traits.hpp \
  grparse.h \
  induced_subgraph.hpp \
  iter.hpp \
  lower_bounds.hpp \
  marker.hpp \
  marker_util.hpp \
  minimum_degree_ordering.hpp \
  misc.hpp \
  network_flow.hpp \
  nice_decomposition.hpp \
  numbering.hpp \
  overlay.hpp \
  platform.hpp \
  postprocessing.hpp \
  preprocessing_edge_insertion.hpp \
  preprocessing.hpp \
  random_generators.hpp \
  random.hpp \
  separator_algorithm.hpp \
  simple_graph_algos.hpp \
  skeleton.hpp \
  timer.hpp \
  trace.hpp \
  treedec.hpp \
  treedec_traits.hpp \
  upper_bounds.hpp \
  validation.hpp

EXTRA_DIST = \
  bucket_sorter.hpp.orig \
  minimum_degree_ordering.hpp.orig
